# test_test_test

./: .gitignore  .test.env  alembic.ini  alembic.sh  docker-compose.yml  dump.sql  prestart.sh  pyproject.toml  readme.md
app/: auth.py  config.py  cruds.py  db.py  depends.py  main.py  models.py  response_models.py  routers.py  services.py
docker/: Dockerfile  entrypoint.sh
migrations/: env.py
migrations/versions/: 2022-03-16-19-47_275d172acf7d_init.py
